--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     build:
       context: ./php
       args:
-        PHP_VERSION: "8.2.1-fpm-alpine3.17"
+        PHP_VERSION: 8.2.1-fpm-alpine3.17
     expose:
       - 9000
     volumes:
@@ -26,6 +26,17 @@ services:
     build:
       context: ./nginx
       args:
-        NGINX_VERSION: "1.23.3"
+        NGINX_VERSION: 1.23.3
     ports:
       - 80:80
+  node:
+    build:
+      context: ./node
+      args:
+        NODE_VERSION: 19.5.0-alpine3.16
+    volumes:
+      - ../frontend:/app
+    expose:
+      - 4200
+    ports:
+      - 4200:4200
