--- a/docker/nginx/symfony.conf
+++ b/docker/nginx/symfony.conf
@@ -5,6 +5,15 @@ server {
     root /var/www/subliminator/public;
 
     location / {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_pass http://node:4200;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    location /api {
         try_files $uri @rewriteapp;
     }
 
