--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "0.0.0.0": "^0.0.1-pre.alpha.1",
     "moment": "^2.29.4",
+    "ng": "^0.0.0",
     "rxjs": "~7.8.0",
+    "serve": "^14.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
